<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MedEq</string>
    <string name="add.patient">Добавить пациента</string>
    <string name="patients">Пациенты</string>
    <string name="app.about">О программе</string>
    <string name="app.manual">Руководство пользователя</string>

    <string name="healed">Лечение проведено</string>
    <string name="not.healed">Лечение не проведено</string>
    <string name="ok">Ок</string>
    <string name="accept">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="therapy_filter_title">Фильтр</string>
    <string name="all">Все</string>
    <string name="therapy">Терапия</string>
    <string name="treatment">Лечение</string>
    <string name="patient.fio">ФИО</string>
    <string name="patient.age">Возраст</string>
    <string name="characteristics">Характеристики</string>
    <string name="patient.stageTNA">Стадия заболевания по TNM</string>
    <string name="patient.psa">ПСА</string>
    <string name="patient.glisson">Глиссон</string>
    <string name="patient.prostateVolume">Объем простаты</string>
    <string name="patient.prostateVolumeHifu">Объем протаты перед HIFU</string>
    <string name="patient.prostateLengthHifu">Длина простаты перед HIFU</string>
    <string name="patient.prostateWidthHifu">Ширина простаты перед HIFU</string>
    <string name="patient.prostateHeightHifu">Высота простаты перед HIFU</string>
    <string name="patient.maxUrineVelocity">Макс. скорость потока мочи</string>
    <string name="patient.avUrineVelocity">Стредняя скорость потока мочи</string>
    <string name="patient.residualUrine">Остаточная моча</string>
    <string name="results">Результаты</string>
    <string name="patient.treatment">Терапия</string>
    <string name="patient.urinaryIncontinence">Недержание мочи</string>
    <string name="patient.acuteUrinaryRetention">Острая задержка мочи</string>
    <string name="patient.diseaseProgression">Прогрессия заболевания</string>
    <string name="patient.stricture">Стриктура</string>
    <string name="patient.healed">Лечение проведено</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="view">Просмотреть</string>
    <string name="delete">Удалить</string>
    <string name="calculate">Рассчитать</string>
    <string name="e.illegalInput">Ошибка! Неверный формат данных.</string>
    <string name="e.emptyFio">Поле ФИО не может быть пустым</string>
    <string name="error_caught">Произошла ошибка. Пожалуйста, отправьте письмо с отчетом.</string>
    <string name="deletion">Удаление</string>
    <string name="delete.confirmation">Вы действительно хотите удалить пациента?</string>
    <string name="not_recommended">Не рекомендуется</string>
    <string name="loading">Загрузка...</string>
    <string name="manual">Руководство Пользователя</string>
    <string name="about">О программе</string>
    <string name="about_1">     Автоматизированная система классификации больных на основе статистического анализа предназначена для врачей узкой специальности и является программой, которая позволяет формировать рекомендации для лечения пациентов подходящей терапией на основе прогнозирования по уравнению регрессии.</string>
    <string name="about_2">     Функции, реализуемые системой:</string>
    <string name="about_3">     1) получение уравнения линейной многофакторной регрессии на основе статистических данных;</string>
    <string name="about_4">     2) ведение справочной информации о больных, прошедших лечение;</string>
    <string name="about_5">     3) работа с обследуемыми больными:</string>
    <string name="about_6">          – добавление больного;</string>
    <string name="about_7">          – редактирование больного;</string>
    <string name="about_8">          – удаление больного;</string>
    <string name="about_9">          – классификация больных для проведения успешной операции;</string>
    <string name="about_10">         – вывод ответа о целесообразности лечения;</string>
    <string name="about_11">    4) фильтр по типу проведенной терапии и факту лечения;</string>
    <string name="about_12">    5) организация информационной поддержки системы.</string>
    <string name="about_13">Самара, 2013 г. </string>

    <string name="manual1">Руководство пользователя</string>
    <string name="manual2">     Автоматизированная система классификации больных на основе статистического анализа предназначена для врачей узкой специальности и является программой, которая позволяет формировать рекомендации для лечения пациентов подходящей терапией.</string>
    <string name="manual3">     Условия работы системы</string>
    <string name="manual4">     Для корректной работы системы необходимо наличие соответствующих программных и аппаратных средств на устройстве пользователя.</string>
    <string name="manual5">     Требования к аппаратному обеспечению:</string>
    <string name="manual6">          - cмартфон/планшетный компьютер с процессором Qualcomm MSM7227A 800 МГЦ и выше;</string>
    <string name="manual7">          - объем оперативной памяти не менее 512 Мб;</string>
    <string name="manual8">          - дисплей с разрешением 470x320;</string>
    <string name="manual9">          - свободное дисковое пространство на 1876 Мб;</string>
    <string name="manual10">          - тип операционной системы Android 4.0 и выше.</string>
    <string name="manual11">     Установка системы</string>
    <string name="manual12">     Для установки системы достаточно скопировать файл «MedEq.apk» в любую директорию мобильного устройства и выполнить его, далее следовать предлагаемым инструкциям.</string>
    <string name="manual13">     Работа с системой</string>
    <string name="manual14">     Опишем основные принципы работы с данной системой.</string>
    <string name="manual15">     Запуск системы</string>
    <string name="manual16">     Для того чтобы запустить данный программный продукт достаточно кликнуть по ярлыку приложения MedEq.</string>
    <string name="manual17">     Работа с системой </string>
    <string name="manual18">     При запуске программы перед пользователем появляется окно, показанное на рисунке 1.</string>
    <string name="manual19">     Для добавления нового пациента необходимо нажать кнопку «Добавить пациента». При этом откроется диалоговое окно, в котором можно ввести характеристики пациента. </string>
    <string name="manual20">     Для расчета результирующих параметров после заполнения полей, необходимо нажать кнопку «Рассчитать», на экране отобразятся показатели и рекомендуемый тип терапии для данного пациента. В случае ввода некорректных значений будет выведено соответствующее сообщение об ошибке.</string>
    <string name="manual21">     В таблице 1 приведен перечень исключительных ситуаций, возникающих при вводе некорректных значений.</string>
    <string name="manual22">     Для использования добавленного больного в перерасчете уравнения регрессии, необходимо указать его данные после лечения и отметить галочкой в поле «Лечение проведено» факт лечения. Для сохранения больного в базу данных пациентов следует нажать на кнопку «Сохранить». Экранная форма данного состояния программы отображена на рисунке 2.</string>
    <string name="manual23">     Для просмотра списка больных, содержащихся в базе, необходимо нажать кнопку «Пациенты» на главной форме. Для поиска пациента по ФИО следует нажать кнопку поиска в правом верхнем углу, после чего появится поле для ввода данных. Для отображения пациентов с определенным видом терапии и фактом лечения следует нажать на кнопку «Фильтр» и выбрать необходимые значения полей для отображения. Экранная форма данного состояния программы отображена на рисунке 3.</string>
    <string name="manual24">     Для просмотра информации о пациенте из списка достаточно нажать необходимое поле в списке, после чего появится окно с данными о больном. Чтобы удалить пациента из базы  или редактировать данные о нем, необходимо нажать на соответствующую кнопку в правом верхнем углу. Экранная форма данного состояния программы отображена на рисунке 4.</string>
    <string name="manual25">     Краткое описание системы</string>

    <string name="manual.table1">Исключительная ситуация</string>
    <string name="manual.table2">Реакция системы</string>
    <string name="manual.table3">Не указано ФИО пациента</string>
    <string name="manual.table4">Поле ФИО не может быть пустым</string>
    <string name="manual.table5">Сумма Глисона неправильной величины</string>
    <string name="manual.table6">Сумма Глисона должна быть в пределах от 2 до 10</string>
    <string name="manual.table7">Значение характеристики пациента не введено</string>
    <string name="manual.table8">Ошибка! Неверный формат данных</string>

    <string name="manual.pict1">Рисунок 1 – Главное окно системы</string>
    <string name="manual.pict2">Рисунок 2 – Расчет результирующих параметров</string>
    <string name="manual.pict3">Рисунок 3 – Выбор необходимых пациентов для отображения</string>
    <string name="manual.pict4">Рисунок 4 – Информация о пациенте</string>


    <string-array name="treatment">
        <item>Все</item>
        <item>Лечение не проведено</item>
        <item>Лечение проведено</item>
    </string-array>
</resources>
